--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.7.2",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "express": "^4.19.2",
     "file-type": "^19.0.0",
+    "image-downloader": "^4.3.0",
     "puppeteer": "^22.10.0"
   }
 }
